crates/ink/tests/ui/selector_bytes/pass/no_implicit_prelude.rs
#![no_implicit_prelude]

const _: [::core::primitive::u8; 4] = ::ink::selector_bytes!(Abi::Ink, , "test");

fn main() {}
