crates/ink/tests/ui/selector_bytes/fail/missing_abi_parameter.rs
const _: [u8; 4] = ink::selector_bytes!(Abi::Ink, "test");

fn main() {}
